# GrayScale

./: .gitignore  LICENSE.html  LICENSE.txt  README.html  README.md  genindex.html  grayscale.html  grayscale.tests.html  grayscale_example.html  grayscale_example.py  index.html  license_link.html  modules.html  objects.inv  py-modindex.html  readme_link.html  search.html  setup.cfg  setup.py
_sources/: grayscale_example.rst.txt  license_link.rst.txt
docs/source/: README.md  conf.py  grayscale.rst  grayscale.tests.rst
grayscale/: __init__.py  __main__.py  shades.py
grayscale/tests/: __init__.py  __main__.py  doctests.py  test_pytest.py  test_unittest.py
sources/: modules.rst.txt
