[metadata]
name = grayscale
version = 0.1.0
author = Vyacheslav Velger
author_email = vyvelger@yandex.ru
description = GrayScale is a package for working with shades of gray
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
platforms =
    Windows
    Linux
    Unix
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
py_modules = grayscale_example
install_requires =
    click>=8.0.0
    pytest>=6.2.0
    coverage>=6.2
python_requires = >=3.7

[options.entry_points]
console_scripts =
    grayscale = grayscale.__main__:main
